[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/shadermaterials/JitterFreeMaterial.tres" type="Material" id=1]
[ext_resource path="res://assets/ui/inventory/element_background.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/inventory/pickable_element_hovered.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/inventory/pickable_background.png" type="Texture" id=4]
[ext_resource path="res://src/Inventory/ItemSlot.gd" type="Script" id=5]

[node name="ItemSlot" type="TextureRect"]
material = ExtResource( 1 )
margin_right = 20.0
margin_bottom = 20.0
texture = ExtResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PickableBg" type="TextureRect" parent="."]
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon" type="TextureRect" parent="PickableBg"]
visible = false
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hovered" type="TextureRect" parent="PickableBg"]
visible = false
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
